AIMER PRO - Transformation Révolutionnaofessionnelles:   Dashboard système avec monitoring temps ofiling hardware automatique et recommandations IA- Launcher principal avec splash screen  ui/pro_dashboard.py - Dashboard professionnel complet  core/hardware_profiler.py - Profiling hardware avancé  core/progress_manager.py - Système de progression intelligent  core/ - Architecture modulaire professiatif  realtime/ - Stream multi-cibles temps réel
 Documentation:
 README_AIMER_PRO.md - Documentation complète
 README_ULTIMATE.md - Guide interface ultime
 DATASET_MANAGER_INTEGRATION.md - Guide datasets

 AIMER PRO - Révolutionnez votre workflow IA !

--- a/.gitignore
+++ b/.gitignore
@@ -62,6 +62,13 @@ config_local.json
 Thumbs.db
 desktop.ini
 
+# Datasets et gros fichiers
+datasets/installed/
+datasets/cache/
+*.zip
+*.tar.gz
+*.db
+
 # Données sensibles
 api_keys.txt
 passwords.txt
