--- a/.gitignore
+++ b/.gitignore
@@ -1,75 +1,24 @@
-# Python
-__pycache__/
-*.py[cod]
-*$py.class
-*.so
-.Python
-build/
-develop-eggs/
-dist/
-downloads/
-eggs/
-.eggs/
-lib/
-lib64/
-parts/
-sdist/
-var/
-wheels/
-*.egg-info/
-.installed.cfg
-*.egg
-MANIFEST
+# Environments
+.venv*/        # tous les venv locaux
+env/           # compatibilité cross-OS
 
-# Virtual Environment
-.venv/
-venv/
-ENV/
-env/
-
-# IDE
-.vscode/
-.idea/
-*.swp
-*.swo
-*~
-
-# Logs et données temporaires
-*.log
-logs/
-system.log
-debug.log
-
-# Captures d'écran et exports
-screenshots/
-exports/
-captures/
-
-# Modèles et données
+# Datasets / modèles lourds
+datasets/
 models/
 *.pt
 *.pth
 *.onnx
-!yolov8n.pt
 
-# Configuration locale
-config_local.json
-.env
-.env.local
+# Logs / artefacts
+logs/
+*.log
+exports/
+screenshots/
+
+# IDE
+.vscode/
+.idea/
 
 # OS
 .DS_Store
 Thumbs.db
-desktop.ini
-
-# Datasets et gros fichiers
-datasets/installed/
-datasets/cache/
-*.zip
-*.tar.gz
-*.db
-
-# Données sensibles
-api_keys.txt
-passwords.txt
-secrets/
