--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,5 @@
-*.pyd filter=lfs diff=lfs merge=lfs -text
+# Track large/binary artefacts with Git LFS
+*.pt   filter=lfs diff=lfs merge=lfs -text
+*.pth  filter=lfs diff=lfs merge=lfs -text
+*.onnx filter=lfs diff=lfs merge=lfs -text
+*.pyd  filter=lfs diff=lfs merge=lfs -text
