--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,9 +1,9 @@
-﻿repos:
+repos:
   - repo: https://github.com/pre-commit/pre-commit-hooks
     rev: v4.6.0
     hooks:
       - id: check-added-large-files
-        args: ['--maxkb=100000']      # allow anything  ~100 MB
+        args: ['--maxkb=100000']      # allow anything ≤ ~100 MB
       - id: end-of-file-fixer
       - id: trailing-whitespace
 
