--- a/requirements_security.txt
+++ b/requirements_security.txt
@@ -18,3 +18,10 @@ python-dotenv>=1.0.0
 
 # Validation
 pydantic>=2.0.0
+
+# Presse-papiers
+pyperclip>=1.8.0
+
+# Tests
+pytest>=7.0.0
+pytest-cov>=4.0.0
